# app/Http/Controllers/Admin/UserController.php
@@ -1,69 +1,0 @@
-<?php
-
-namespace App\Http\Controllers\Admin;
-
-use App\Http\Controllers\Controller;
-use App\Http\Requests\Admin\User\StoreUserRequest;
-use App\Services\Admin\UserService;
-use Illuminate\Http\Request;
-
-class UserController extends Controller
-{
-    public function __construct(
-        protected UserService $userService
-    ){}
-
-    /**
-     * @OA\Get(
-     *     path="/api/admin/user",
-     *     tags={"User"},
-     *     summary="Get list of users",
-     *     description="Only accessible for authenticated users",
-     *     security={{"passport":{}}},
-     *     @OA\Response(
-     *         response=200,
-     *         description="List of users"
-     *     ),
-     *     @OA\Response(
-     *         response=401,
-     *         description="Unauthorized"
-     *     )
-     * )
-     */
-    public function index()
-    {
-        return $this->userService->allUsers();
-    }
-
-    /**
-     * Store a newly created resource in storage.
-     */
-    public function store(StoreUserRequest $request)
-    {
-        return $this->userService->createUser($request->all());
-    }
-
-    /**
-     * Display the specified resource.
-     */
-    public function show(string $id)
-    {
-        //
-    }
-
-    /**
-     * Update the specified resource in storage.
-     */
-    public function update(Request $request, string $id)
-    {
-        //
-    }
-
-    /**
-     * Remove the specified resource from storage.
-     */
-    public function destroy(string $id)
-    {
-        //
-    }
-}
